--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
@@ -62,12 +62,12 @@
             <td class="hidden-xs">{{ atl.costetotal|number_format(2, ',', '.') }}€</td>
             <td>{{ atl.estado }}</td>
             <td class="hidden-xs{% if atl.sidPar is not defined %} text-muted{% endif %}">{{ atl.dorsal }}</td>
-            <td class="hidden-xs"><input id="asistCB-{{ atl.id }}" type="checkbox" onClick="toggleAsist(this, {{ atl.id }})"{% if atl.sidPar is not defined %} disabled{% endif %}{% if atl.asistencia == true %} checked{% endif %}></td>
+            <td class="hidden-xs"><input id="asistCB-{{ atl.id }}" type="checkbox" onClick="toggleAsist(this, {{ atl.sidPar }})"{% if atl.sidPar is not defined %} disabled{% endif %}{% if atl.asistencia == true %} checked{% endif %}></td>
             <td>
                <div class="btn-group visible-xs-block">
                   <button type="button" class="btn btn-xs btn-block btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-option-horizontal" aria-label="Acciones"></span></button>
                   <ul class="dropdown-menu pull-right">
-                     {% if atl.sidPar is defined %}<li><a id="asistLI-{{ atl.id }}" href="#" onClick="toggleAsist(this, {{ atl.id }})">{% if atl.asistencia == true %}<span class="glyphicon glyphicon-check"></span> Asistencia [SI]{% else %}<span class="glyphicon glyphicon-unchecked"></span> Asistencia [NO]{% endif %}</a></li>{% endif %}
+                     {% if atl.sidPar is defined %}<li><a id="asistLI-{{ atl.id }}" href="#" onClick="toggleAsist(this, {{ atl.sidPar }})">{% if atl.asistencia == true %}<span class="glyphicon glyphicon-check"></span> Asistencia [SI]{% else %}<span class="glyphicon glyphicon-unchecked"></span> Asistencia [NO]{% endif %}</a></li>{% endif %}
                      <li><a href="#" onClick="showModal('newPAR', {{ atl.id }}, null, null)"><span class="glyphicon glyphicon-bullhorn"></span> {% if atl.sidPar is not defined %}Confirmar participación{% else %}Cambiar dorsal{% endif %}</a></li>
                      <li><a href="#" onClick="showModal()"><span class="glyphicon glyphicon-edit"></span> Editar</a></li>
                      <li><a class="bg-danger" href="#" onClick="showModal()"><div class="text-danger"><span class="glyphicon glyphicon-remove-circle"></span> Desinscribir</div></a></li>
