Inicio formulario incripciones

--- a/src/Easanles/AtletismoBundle/Resources/views/Prueba/list_prueba.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Prueba/list_prueba.html.twig
@@ -96,7 +96,7 @@
                            <td>{{ ron.nombre }}</td>
                            <td>
                               0 <span class="hidden-xs">atletas</span>
-                              <button type="button" class="btn btn-xs btn-default pull-right" data-toggle="tooltip" data-placement="top" title="Ver resultados" onClick="showModal()"><span class="glyphicon glyphicon-list-alt"></span><span class="hidden-xs"> Ver resultados</span></button>
+                              <button disabled type="button" class="btn btn-xs btn-default pull-right" data-toggle="tooltip" data-placement="top" title="Ver resultados" onClick="showModal()"><span class="glyphicon glyphicon-list-alt"></span><span class="hidden-xs"> Ver resultados</span></button>
                            </td>
                         </tr>
                      {% endfor %}
