--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/list_inscripcion.html.twig
@@ -16,7 +16,6 @@
   <li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
   <li><a href="{{ path('ver_competicion', {'id': com.sid}) }}">{{ com.nombre }} ({{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }})</a></li>
   <li class="active">Inscripciones</li>
-  
 {% endblock %}
 
    {% block modallabel %}<div id="dialog-label"></div>{% endblock %}
@@ -28,7 +27,7 @@
    <div id="container_header" class="row">
       <a type="button" class="btn btn-m btn-default hidden-xs" href="javascript:history.back()"><span class="glyphicon glyphicon-menu-left"></span> Volver</a>
       <button class="updater hidden" onClick="location.reload()"></button>
-      <button class="btn btn-primary" onClick="showModal()" disabled><span class="glyphicon glyphicon-plus"></span> Inscribir<span class="hidden-xs"> atleta</span></button>
+      <a class="btn btn-primary" href="{{ path('inscribir_atletas', {'sidCom': com.sid}) }}"><span class="glyphicon glyphicon-plus"></span> Inscribir<span class="hidden-xs"> atleta(s)</span></a>
    </div>
    <table id="primary_table" class="table table-hover table-bordered table-condensed table-responsive">
       <tbody>
@@ -75,8 +74,8 @@
                </div>
                <div class="hidden-xs">
                   <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="{% if atl.sidPar is not defined %}Confirmar participación{% else %}Cambiar dorsal{% endif %}" onClick="showModal('newPAR', {{ atl.id }}, null, null)"><span class="glyphicon glyphicon-bullhorn"></span></button>
-                  <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Editar" onClick="showModal()"><span class="glyphicon glyphicon-edit"></span></button>
-                  <button type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Desinscribir" onClick="showModal()"><span class="glyphicon glyphicon-remove-circle"></span></button>
+                  <button disabled type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Editar" onClick="showModal()"><span class="glyphicon glyphicon-edit"></span></button>
+                  <button disabled type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Desinscribir" onClick="showModal()"><span class="glyphicon glyphicon-remove-circle"></span></button>
                </div>
             </td>
          </tr>
@@ -103,7 +102,7 @@
                            <td class="hidden-xs">{{ ins.coste }}€</td>
                            <td>{{ ins.estado }}</td>
                            <td class="hidden-xs">0</td>
-                           <td><button type="button" class="btn btn-xs btn-block btn-default" onClick="showModal()"><span class="glyphicon glyphicon-dashboard" aria-label="Registrar marcas"></span></button></td>
+                           <td><button disabled type="button" class="btn btn-xs btn-block btn-default" onClick="showModal()"><span class="glyphicon glyphicon-dashboard" aria-label="Registrar marcas"></span></button></td>
                         </tr>
                      {% endfor %}
                   </tbody>
