--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/sel_atleta.html.twig
@@ -11,7 +11,6 @@
             <input id="search-input" type="search" class="form-control" placeholder="Buscar"{% if query is defined %} value="{{query}}"{% endif %}) onkeydown="checkEnterKeypress(event)">
             <div class="input-group-btn"><button id="search-button" class="btn btn-default" type="button" onClick="insAtlSearch({% if cat is defined %}{{cat}}{% else %}null{% endif %}, getQuery())"><span class="glyphicon glyphicon-search"></span></button></div>
          </div>
-         <button class="btn btn-primary pull-right">Siguiente <span class="glyphicon glyphicon-arrow-right"></span></button>
       </div>
       
       <table id="primary_table" class="table table-hover table-bordered table-condensed table-striped table-responsive">
@@ -46,7 +45,7 @@
          <td class="hidden-xs">{{ atl.fnac|date('d/m/Y') }}</td>
          <td>{% if atl.nick is null or atl.nick == "" %} <em class="text-muted">--</em> {% else %} {{ atl.nick }} {% endif %} </td>
          <td>
-            <button id="sel-atl-{{ atl.id }}" type="checkbox" data-toggle="button" class="btn btn-xs btn-block btn-default" onClick="toggleCheckButton(this)"><span class="glyphicon glyphicon-unchecked"></span> NO</button>
+            <button id="sel-atl-{{ atl.id }}" type="checkbox" data-toggle="button" class="btn btn-xs btn-block btn-default sel-btn" onClick="toggleCheckButton(this)"><span class="glyphicon glyphicon-unchecked"></span> NO</button>
          </td>
          </tr>
          {% endfor %}
