Pantalla asignacion pruebas a atletas

--- a/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/form_inscripcion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Inscripcion/form_inscripcion.html.twig
@@ -38,7 +38,7 @@
          <li role="presentation" id="inspill-pru" class="disabled"><a href="#" onClick="toggleInsPages('pru')">Pruebas</a></li>
          <li role="presentation" id="inspill-confirm" class="disabled"><a href="#" onClick="toggleInsPages('confirm')">Confirmación</a></li>
       </ul>
-      <button id="btn-next" class="btn btn-primary pull-right" onClick="$('inspill-pru').click()" disabled>Siguiente <span class="glyphicon glyphicon-arrow-right"></span></button>
+      <button id="btn-next" class="btn btn-primary pull-right" disabled onClick="$('#inspill-pru a').click()">Siguiente <span class="glyphicon glyphicon-arrow-right"></span></button>
    </div>
    
    <div class="row" style="margin-top: 1em">
